Separate archlinux-dev base image

--- a/code-server/Dockerfile
+++ b/code-server/Dockerfile
@@ -1,33 +1,24 @@
-FROM archlinux/base:latest
+FROM archlinux-dev:latest
 
-ARG CODE_URL=https://github.com/cdr/code-server/releases/download/1.1156-vsc1.33.1/code-server1.1156-vsc1.33.1-linux-x64.tar.gz
-
-COPY ./packages .
+USER root
+WORKDIR /
+COPY packages .
 RUN pacman -Sy --noconfirm - < packages
 
 WORKDIR /usr/local/bin
+ARG CODE_URL=https://github.com/cdr/code-server/releases/download/1.1156-vsc1.33.1/code-server1.1156-vsc1.33.1-linux-x64.tar.gz
 RUN curl -Ls $CODE_URL | bsdtar -xf - --strip-components=1 "$(basename $CODE_URL .tar.gz)/code-server"
 
-RUN useradd -m -s /usr/bin/fish dev
 USER dev
-ENV PATH="/home/dev/.local/bin:${PATH}"
 WORKDIR /home/dev
 
 RUN mkdir -p .local/share/code-server/extensions
 RUN mkdir -p .local/share/code-server/User
 RUN echo '{}' > .local/share/code-server/User/settings.json
 
-RUN mkdir -p .config/fish/functions
-RUN cp /usr/share/fish/tools/web_config/sample_prompts/robbyrussell.fish \
-  .config/fish/functions/fish_prompt.fish
-
-COPY --chown=dev:dev ./dotfiles.git .dotfiles.git
-RUN git --git-dir=./.dotfiles.git --work-tree=. checkout .
-
-RUN mkdir -p project
-WORKDIR project
-
 RUN pip install --user pip-tools
 RUN code-server --install-extension ms-python.python
+
+WORKDIR project
 
 ENTRYPOINT ["code-server", "--allow-http", "--no-auth"]
