--- a/code-server/settings.json
+++ b/code-server/settings.json
@@ -1,5 +1,7 @@
 {
-    "python.linting.flake8Path": "/usr/bin/flake8",
     "python.linting.flake8Enabled": true,
+    "python.linting.flake8Path": "/usr/bin/flake8",
+    "python.linting.mypyEnabled": true,
+    "python.linting.mypyPath": "/usr/bin/mypy",
     "python.linting.pylintEnabled": false
 }
