Misc changes to development containers

--- a/intellij/Dockerfile
+++ b/intellij/Dockerfile
@@ -3,8 +3,8 @@ FROM archlinux-dev:latest
 USER root
 WORKDIR /
 COPY ./packages .
-RUN pacman -Sy --noconfirm - < packages
-RUN pacman -Scc
+RUN pacman -Sy --noconfirm --needed - < packages \
+  && pacman -Scc --noconfirm
 
 RUN sed -i 's/# %wheel/%wheel/' /etc/sudoers
 RUN sed -i "s/PKGEXT='.pkg.tar.xz'/PKGEXT='.pkg.tar'/" /etc/makepkg.conf
@@ -13,7 +13,7 @@ RUN usermod -a -G wheel dev
 
 USER dev
 WORKDIR /home/dev
-ARG intellij_commit=891a333ea6bfc34ddfa32dc313065c2cad9c1f5b
+ARG intellij_commit=15edfccd8df08ec39cf573c8162786df74c582d7
 RUN git clone https://aur.archlinux.org/intellij-idea-ultimate-edition.git \
   && cd intellij-idea-ultimate-edition \
   && git checkout $intellij_commit \
