--- a/vscode/Dockerfile
+++ b/vscode/Dockerfile
@@ -3,14 +3,11 @@ FROM archlinux-dev:latest
 USER root
 WORKDIR /
 COPY packages .
-RUN pacman -Sy --noconfirm - < packages
+RUN pacman -Sy --noconfirm --needed - < packages \
+  && pacman -Scc --noconfirm
 
 USER dev
 WORKDIR /home/dev
-
-#RUN mkdir -p .local/share/code-server/extensions
-#RUN mkdir -p .local/share/code-server/User
-#RUN echo '{}' > .local/share/code-server/User/settings.json
 
 RUN pip install --user pip-tools
 RUN code --install-extension ms-python.python
