--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.tabSize": 2,
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Path": "/usr/bin/flake8",
     "python.linting.mypyEnabled": true,
