IntellJ: Update, network=dev, volume for config

--- a/intellij/Dockerfile
+++ b/intellij/Dockerfile
@@ -13,7 +13,7 @@ RUN usermod -a -G wheel dev
 
 USER dev
 WORKDIR /home/dev
-ARG intellij_commit=15edfccd8df08ec39cf573c8162786df74c582d7
+ARG intellij_commit=8e796a652d389b019dca2b11a08fc6a3d7495cb9
 RUN git clone https://aur.archlinux.org/intellij-idea-ultimate-edition.git \
   && cd intellij-idea-ultimate-edition \
   && git checkout $intellij_commit \
@@ -27,5 +27,6 @@ RUN pacman -Rsn --noconfirm sudo
 
 USER dev
 COPY --chown=dev:dev javaUserPrefs /home/dev/.java/.userPrefs
+RUN mkdir .IntelliJIdea2019.3
 
 ENTRYPOINT ["intellij-idea-ultimate-edition", "/home/dev/project"]
