--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -5,5 +5,6 @@
     "python.linting.mypyEnabled": true,
     "python.linting.mypyPath": "/usr/bin/mypy",
     "python.linting.pylintEnabled": false,
-    "terminal.integrated.shell.linux": "/usr/bin/fish"
+    "terminal.integrated.shell.linux": "/usr/bin/fish",
+    "window.zoomLevel": -1
 }
