--- a/code-server/settings.json
+++ b/code-server/settings.json
@@ -3,5 +3,9 @@
     "python.linting.flake8Path": "/usr/bin/flake8",
     "python.linting.mypyEnabled": true,
     "python.linting.mypyPath": "/usr/bin/mypy",
-    "python.linting.pylintEnabled": false
+    "python.linting.pylintEnabled": false,
+    "terminal.integrated.shell.linux": "/usr/bin/fish",
+    "update.mode": "none",
+    "extensions.autoCheckUpdates": false,
+    "extensions.autoUpdate": false
 }
