cheat: bump version 4.0.2 to 4.2.0

--- a/cheat/Dockerfile
+++ b/cheat/Dockerfile
@@ -4,10 +4,11 @@ RUN addgroup -g 801 appuser
 RUN adduser -D -u 801 -G appuser appuser
 
 WORKDIR /usr/local/bin
-RUN wget -O- https://github.com/cheat/cheat/releases/download/4.0.2/cheat-linux-amd64.gz \
-  | zcat \
-  > cheat
-RUN chmod +x cheat
+RUN wget https://github.com/cheat/cheat/releases/download/4.2.0/cheat-linux-amd64.gz \
+  && echo '25d64ac3565c6976d3bb8508fb2a3434d7f7a696762735d3103e5bf039338338  cheat-linux-amd64.gz' > SHA256SUMS \
+  && sha256sum -c SHA256SUMS \
+  && gunzip -c cheat-linux-amd64.gz > cheat \
+  && chmod +x cheat
 
 USER appuser
 RUN mkdir /home/appuser/cheatsheets
