--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,10 +1,16 @@
 {
+    "editor.minimap.enabled": false,
     "editor.tabSize": 2,
+    "extensions.autoCheckUpdates": false,
+    "extensions.autoUpdate": false,
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Path": "/usr/bin/flake8",
     "python.linting.mypyEnabled": true,
     "python.linting.mypyPath": "/usr/bin/mypy",
     "python.linting.pylintEnabled": false,
     "terminal.integrated.shell.linux": "/usr/bin/fish",
-    "window.zoomLevel": -1
+    "update.mode": "none",
+    "window.zoomLevel": -1,
+    "workbench.colorTheme": "Default Dark+",
+    "workbench.tree.indent": 20
 }
