Obsidian: Add StartupNotify=true

--- a/obsidian/obsidian.desktop
+++ b/obsidian/obsidian.desktop
@@ -2,5 +2,6 @@
 Name=Obsidian
 Exec=/home/colin/proj/dockerfiles/obsidian/run
 Icon=obsidian
+StartupNotify=true
 StartupWMClass=obsidian
 Type=Application
