--- a/beet/config.yaml
+++ b/beet/config.yaml
@@ -1,3 +1,8 @@
 library: ~/Music/library.db
+plugins: convert
+
 import:
-  timid: yes
+  timid: true
+
+convert:
+  never_convert_lossy_files: true
