--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -8,9 +8,8 @@
     "python.linting.mypyEnabled": true,
     "python.linting.mypyPath": "/usr/bin/mypy",
     "python.linting.pylintEnabled": false,
-    "terminal.integrated.shell.linux": "/usr/bin/fish",
+    "terminal.integrated.defaultProfile.linux": "fish",
     "update.mode": "none",
-    "window.zoomLevel": -1,
     "workbench.colorTheme": "Default Dark+",
     "workbench.tree.indent": 20
 }
