--- a/obsidian/Dockerfile
+++ b/obsidian/Dockerfile
@@ -1,9 +1,6 @@
-FROM archlinux:base-devel-20220501.0.54834
+FROM archlinux-colin
 
-RUN echo 'Server=https://archive.archlinux.org/repos/2022/05/01/$repo/os/$arch' \
-  > /etc/pacman.d/mirrorlist
-
-RUN pacman -Sy --noconfirm \
+RUN pacman -S --noconfirm \
     asar \
     electron13 \
     fuse \
