--- a/python-dev/Dockerfile
+++ b/python-dev/Dockerfile
@@ -17,13 +17,15 @@ RUN pip install --user --no-cache-dir --require-hashes \
     -r requirements.txt \
   && rm requirements.txt
 
-ENV PY_EXT_VER=2021.10.1365161279
-ENV PY_EXT_HASH=987b7e72662538d5b045d5a09ad7deb707e4d634607a09b16c45072e57259429
-ENV VS_EXT_URL=https://marketplace.visualstudio.com/_apis/public/gallery/publishers
-RUN curl -L --compressed -o ext.vsix "$VS_EXT_URL/ms-python/vsextensions/python/$PY_EXT_VER/vspackage" \
-  && echo "$PY_EXT_HASH  ext.vsix" | sha256sum -c - \
-  && code-server --install-extension ext.vsix \
-  && code-server --uninstall-extension ms-toolsai.jupyter
+ENV EXT_VER=2022.4.1
+ENV EXT_HASH=66d00fd62fb4ad39be8d915c8be361c773f1fd1a4bf21558cf5b02101af7ccc3
+ENV EXT_VENDOR=ms-python
+ENV EXT_NAME=python
+RUN curl -L --compressed -o ext.vsix \
+    "$EXT_BASE_URL/$EXT_VENDOR/vsextensions/$EXT_NAME/$EXT_VER/vspackage" &&\
+  echo "$EXT_HASH  ext.vsix" | sha256sum -c - &&\
+  code-server --install-extension ext.vsix &&\
+  rm ext.vsix
 
 WORKDIR project
 
