--- a/c-dev/Dockerfile
+++ b/c-dev/Dockerfile
@@ -2,13 +2,15 @@ FROM vscode:latest
 
 WORKDIR /home/dev
 
-ENV CPP_EXT_VER=1.7.1
-ENV EXT_BASE_URL=https://marketplace.visualstudio.com/_apis/public/gallery/publishers
+ENV EXT_VER=1.11.0
+ENV EXT_HASH=c0725d3914aeb2515627691727455cc27e7a75031fa02ca957be02cc210bd64d
+ENV EXT_VENDOR=ms-vscode
+ENV EXT_NAME=cpptools
 RUN curl -L --compressed -o ext.vsix \
-    "$EXT_BASE_URL/ms-vscode/vsextensions/cpptools/$CPP_EXT_VER/vspackage" \
-  && echo 'daf8247e9a10080fb5078af78766230619f161fda29c2a2334315700b87d8641  ext.vsix' | sha256sum -c - \
-  && code --install-extension ext.vsix \
-  && rm ext.vsix
+    "$EXT_BASE_URL/$EXT_VENDOR/vsextensions/$EXT_NAME/$EXT_VER/vspackage?targetPlatform=linux-x64" &&\
+  echo "$EXT_HASH  ext.vsix" | sha256sum -c - &&\
+  code --install-extension ext.vsix &&\
+  rm ext.vsix
 
 WORKDIR project
 
