--- a/avr/settings.json
+++ b/avr/settings.json
@@ -1,6 +1,10 @@
 {
+    "C_Cpp.default.compilerPath": "/usr/sbin/avr-gcc",
+    "C_Cpp.default.cStandard": "gnu17",
+    "C_Cpp.default.cppStandard": "gnu++17",
+    "C_Cpp.default.intelliSenseMode": "gcc-arm",
     "C_Cpp.default.includePath": [
         "/usr/avr/include/**",
         "${workspaceFolder}/**",
-    ]
+    ],
 }
