Obsidian official Arch package + Debian fallback

--- a/obsidian/Dockerfile
+++ b/obsidian/Dockerfile
@@ -1,26 +1,12 @@
 FROM archlinux-colin
 
 RUN pacman -S --noconfirm \
-    asar \
-    electron13 \
-    fuse \
-    git \
-    hicolor-icon-theme \
+    obsidian \
   && pacman -Scc --noconfirm
 
 RUN useradd -m appuser
 USER appuser
 WORKDIR /home/appuser
-
-ARG commit=ce79f2ada933b1e91d0ef7a32515408d8b1a08a1
-RUN git clone https://aur.archlinux.org/obsidian.git
-WORKDIR obsidian
-RUN git checkout $commit
-RUN makepkg --verifysource --noextract --noprepare --nobuild
-RUN makepkg -c
-
-USER root
-RUN pacman -U --noconfirm *.tar.zst
 
 COPY xdg-open-client /usr/local/bin/xdg-open
 
