beancount: Install with pip

--- a/beancount/Dockerfile
+++ b/beancount/Dockerfile
@@ -1,18 +1,22 @@
-FROM debian:bullseye-slim
+FROM python:3.10-slim-bullseye
 
 RUN groupadd -g 1000 appuser
 RUN useradd -m -u 1000 -g appuser appuser
 
-RUN apt-get update \
-  && apt-get install -y --no-install-recommends \
-    beancount \
-    python3-fava \
-  && rm -rf /var/lib/apt/lists/*
+RUN chown -R appuser:appuser /usr/local
+ENV BUILD_DEPS="build-essential"
+COPY requirements.txt /
+RUN apt-get update &&\
+  apt-get -y install --no-install-recommends $BUILD_DEPS &&\
+  su appuser -c 'pip install --no-cache-dir --require-hashes -r /requirements.txt' &&\
+  find /usr/local -name __pycache__ -prune -exec rm -rf '{}' \+ &&\
+  chown -R root:root /usr/local &&\
+  apt-get -y autoremove --purge $BUILD_DEPS &&\
+  rm -rf /var/lib/apt/lists/* &&\
+  chown -R root:root /usr/local
 
 USER appuser
-
-WORKDIR /home/appuser
-RUN mkdir workdir
-WORKDIR workdir
+RUN mkdir /home/appuser/workdir
+WORKDIR /home/appuser/workdir
 
 ENTRYPOINT ["fava", "--host", "0.0.0.0"]
