--- a/makemkv/Dockerfile
+++ b/makemkv/Dockerfile
@@ -1,13 +1,17 @@
 FROM archlinux-colin
 
-RUN pacman --noconfirm -S git ffmpeg jre11-openjdk \
+RUN pacman --noconfirm -S \
+    git \
+    ffmpeg \
+    jre11-openjdk \
+    openssl-1.1 \
   && pacman --noconfirm -Scc
 
 RUN useradd -m appuser
 USER appuser
 WORKDIR /home/appuser
 
-ARG makemkv_commit=b1cd3d1d55a47ec424063ff86c523db0921aca77
+ARG makemkv_commit=7a572bca5b4546ae19a356b7dfbb660be917462d
 RUN git clone https://aur.archlinux.org/makemkv-cli.git
 WORKDIR makemkv-cli
 RUN git checkout $makemkv_commit
